# fp-practice

./: README.md
fpprac/: dune  dune-project
fpprac/_build/: .db  .digest-db  log
fpprac/_build/default/: fpprac.dune-package  fpprac.install  fpprac.opam
fpprac/_build/default/.dune/: configurator  configurator.v2
fpprac/_build/default/.ppx/960fdef1c3c55fa96c02cffb8a806b5a/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
fpprac/_build/default/lib/: Lam.cma  Lam.cmxa  Lam.cmxs  lam.ml  lam.pp.ml
fpprac/_build/default/lib/.Lam.objs/byte/: lam.cmi  lam.cmo  lam.cmt
fpprac/_build/default/lib/.Lam.objs/native/: lam.cmx
fpprac/_build/default/lib/.merlin-conf/: lib-Lam
fpprac/_build/default/test/: test_fpprac.cma  test_fpprac.cmxa  test_fpprac.cmxs  test_fpprac.ml  test_fpprac.pp.ml
fpprac/_build/default/test/.merlin-conf/: lib-test_fpprac
fpprac/_build/default/test/.test_fpprac.inline-tests/: partitions-best
fpprac/_build/default/test/.test_fpprac.objs/byte/: test_fpprac.cmi  test_fpprac.cmo  test_fpprac.cmt
fpprac/_build/default/test/.test_fpprac.objs/native/: test_fpprac.cmx
fpprac/_build/install/default/lib/fpprac/: META  dune-package  opam
fpprac/lib/: dune  lam.ml  misc.ml  temp.html
fpprac/results/: lambdas-ref.txt
fpprac/results/ao/: fact3.txt  fibb6.txt  pred2.txt
fpprac/results/cbn/: fact3.txt  fibb6.txt  pred2.txt
fpprac/results/cbv/: fact3.txt  fibb6.txt  pred2.txt
fpprac/results/no/: fibb6.txt  pred2.txt
fpprac/test/: dune
(+8 files in other folders)
